updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Bootcamp student in training to become a web developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm originally from Chicago, and recently moved to Charlotte, NC from Seattle, WA
+      </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Kickboxing, gaming, movie buff</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Developing iOS, macOS, Android and Windows applications for personal small businesses, and developing for a highly reputable software company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Charlotte, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To improve the quality of life for my family, and to allow my full creative capacity to take shape in developing for business.</p>
     </section>
 
     <footer id="footer">
